--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,9 @@ div {
 }
 /* starbox */
 #startbox {
-    background-color: aqua;
-    width: 300px;
+    width: 200px;
     height: 100px;
-    /*position: absolute;*/
+    margin: auto;
 }
 #startbtn {
     height: 40px;
@@ -64,6 +63,7 @@ button {
 /* choices 
 .btnCol{
 	color: #fff;
+	display: none; (hide/reveal)
 	width: 25%;
 	float: left; 
 	text-align: center;
